--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "Shark_Pract1.C": "cpp",
         "stdlib.h": "c",
         "fun_ord.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
