--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "files.associations": {
         "Shark_Pract1.C": "cpp",
         "stdlib.h": "c",
-        "fun_ord.h": "c"
+        "fun_ord.h": "c",
+        "vector": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
